<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MeterPal</string>
    <string name="title_activity_display_message">My Message!!!</string>
    <string name="title_activity_record_counter">Enter Meter Reading</string>
    <string name="title_activity_new_meter">Register new Meter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world 2!</string>
    <string name="button_send">Send now!</string>
    <string name="edit_message">This is the Edit Message</string>
    <string name="recordText">record</string>
    <string name="meterSnapshot">meter snapshot</string>
    <string name="lightSwitchText">switch on the flashlight</string>
    <string name="meterSnapshotCamera">take snapshot</string>
    <string name="meterSnapshotActiveArea">please bring counter into active area</string>
    <string name="counter_name_label">Meter name</string>
    <string name="counter_ID_label">Meter ID</string>
    <string name="counter_type_label">Meter type</string>
    <string name="done">Submit</string>
    <string name="share">Share</string>
    <string name="newmeter">New Meter</string>
    <string name="newMeterName">New Device</string>

    <string-array name="initialContentListView">
        <item>39223,3 22.03.1972 11:14</item>
        <item>39224,3 23.03.1972 11:14</item>
        <item>39225,3 24.03.1972 11:14</item>
        <item>39226,3 25.03.1972 11:14</item>
        <item>39227,3 26.03.1972 12:15</item>
    </string-array>
    <string-array name="deviceTypeIdentifiers">
        <item>Electric</item>
        <item>Gas</item>
        <item>Water</item>
        <item>Odometer</item>
        <item>running hours</item>
    </string-array>
    <string-array name="deviceNames">
        <item>DevA</item>
        <item>DevB</item>
        <item>DevC</item>
    </string-array>

    <string name="listViewDescription">Log of past measurements</string>
    <string name="title_activity_new_device">NewDeviceActivity</string>
    <string name="deleteDB">Delete DB</string>

</resources>