<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RecordDeviceReadingActivity" >

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="top|left" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/meterTakenValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="top|center_horizontal"
            android:hint="enter meter value here"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:text="33239.324"
            android:textAlignment="viewEnd"
            android:textAppearance="?android:attr/textAppearanceLarge" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/recordMeter"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minEms="6"
            android:onClick="newReadingDone"
            android:text="@string/recordText"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/cameraFrame"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_below="@+id/recordMeter"
        android:background="@drawable/rect" >

        <ImageButton
            android:id="@+id/cameraButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|right"
            android:contentDescription="@string/meterSnapshotCamera"
            android:src="@android:drawable/ic_menu_camera" />

        <ImageView
            android:id="@+id/activeArea"
            android:layout_width="100dp"
            android:layout_height="96dp"
            android:layout_gravity="center"
            android:contentDescription="@string/meterSnapshotActiveArea"
            android:scaleType="fitCenter"
            android:src="@drawable/activearea" />

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/lightSwitchText"
            android:src="@drawable/ic_flash" />
    </FrameLayout>

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/cameraFrame"
        android:layout_weight="1"
        android:background="@drawable/rect"
        android:contentDescription="@string/listViewDescription"
        android:dividerHeight="0dp"
        android:footerDividersEnabled="false"
        android:headerDividersEnabled="false" />

</LinearLayout>