<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewMeterActivity" >

    <TextView
        android:id="@+id/counter_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/counter_name_label" />

    <TextView
        android:id="@+id/counter_ID_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/counter_name_label"
        android:layout_below="@+id/counter_name_label"
        android:layout_marginTop="10dp"
        android:text="@string/counter_ID_label" />

    <TextView
        android:id="@+id/counter_type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/counter_ID_label"
        android:layout_below="@+id/counter_ID_label"
        android:layout_marginTop="10dp"
        android:text="@string/counter_type_label" />

    <EditText
        android:id="@+id/counter_ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/counter_ID_label"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="text|textCapCharacters"
        android:singleLine="true" />

    <EditText
        android:id="@+id/counter_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/counter_type_label"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:gravity="end"
        android:inputType="text|textCapCharacters"
        android:singleLine="true"
        android:textIsSelectable="true" />

    <EditText
        android:id="@+id/counter_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/counter_name_label"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="text|textCapCharacters"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttonDone"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/counter_type"
        android:layout_below="@+id/counter_type"
        android:layout_marginTop="40dp"
        android:onClick="newMeterDone"
        android:text="@string/done" />

</RelativeLayout>