<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddMeterDeviceActivity" >

    <TextView
        android:id="@+id/counter_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/counter_name_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/counter_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/counter_name_label"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/counter_name_label"
        android:ems="10"
        android:inputType="text"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceMedium" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/counter_type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/counter_name_label"
        android:layout_marginTop="10dp"
        android:entries="@array/deviceTypeIdentifiers"
        android:text="@string/counter_type_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/counter_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/counter_name"
        android:layout_alignTop="@+id/counter_type_label"
        android:entries="@array/deviceTypeIdentifiers" />

    <Button
        android:id="@+id/buttonSubmit"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/counter_type_label"
        android:layout_below="@+id/counter_type"
        android:layout_marginTop="24dp"
        android:onClick="onSubmit"
        android:text="@string/done" />

</RelativeLayout>